<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone" />

    <include
        android:id="@+id/errorLayout"
        layout="@layout/error"
        tools:visibility="gone" />

    <ScrollView
        android:id="@+id/userProfileContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userPhotoImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/description_user_photo" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center_horizontal"
                android:textColor="@color/text_primary"
                android:textIsSelectable="true"
                android:textSize="22sp"
                tools:text="Odnovolov Artem" />

            <TextView
                android:id="@+id/ageLabel"
                style="@style/UserProfileFieldLabel"
                android:layout_marginTop="40dp"
                android:text="@string/label_age" />

            <TextView
                android:id="@+id/ageTextView"
                style="@style/UserProfileField"
                tools:text="29" />

            <TextView
                android:id="@+id/cityLabel"
                style="@style/UserProfileFieldLabel"
                android:text="@string/label_city" />

            <TextView
                android:id="@+id/cityTextView"
                style="@style/UserProfileField"
                tools:text="Kyiv" />

            <TextView
                android:id="@+id/emailLabel"
                style="@style/UserProfileFieldLabel"
                android:text="@string/label_email" />

            <TextView
                android:id="@+id/emailTextView"
                style="@style/UserProfileField"
                android:layout_marginBottom="32dp"
                tools:text="odnovolov.artem@gmail.com" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>