<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/homeViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bottom_navigation_bar"
        android:elevation="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/menButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_outline_male_24"
                app:tint="@color/bottom_navigation_button"
                app:tintMode="src_atop" />

            <TextView
                android:id="@+id/menTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_men"
                android:textColor="@color/bottom_navigation_button"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/randomPersonButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_outline_face_24"
                app:tint="@color/bottom_navigation_button"
                app:tintMode="src_atop" />

            <TextView
                android:id="@+id/randomPersonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_random_person"
                android:textColor="@color/bottom_navigation_button"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/womenButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_outline_female_24"
                app:tint="@color/bottom_navigation_button"
                app:tintMode="src_atop" />

            <TextView
                android:id="@+id/womenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_women"
                android:textColor="@color/bottom_navigation_button"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>